corretion sur les messages dans navbar : si j'ai pas de messages, je ne vois pas le bouton messages + correction alignement des tags sur index retiré space between, amélioré style des liens log in sign in

--- a/app/assets/stylesheets/components/_tags.scss
+++ b/app/assets/stylesheets/components/_tags.scss
@@ -30,7 +30,6 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 10px;
-  justify-content: space-between;
   margin-right: 7px;
 }
 
